<resources>
    <string name="app_name">迎宾</string>
    <string name="start_guests_value">开始测试</string>
    <string name="setting_value">进入迎宾</string>
    <string name="setting_status">超声波状态</string>
    <string name="setting_title">等待状态设置</string>
    <string name="distance_text">距离：</string>
    <string name="distance_unit">cm</string>
    <string name="tts_text">迎宾语</string>
    <string name="finish_tts_text">结束语</string>
    <string name="ultrasonic_text">超声波</string>
    <string name="ultrasonic_guest_delay_time">延迟时间：</string>
    <string name="remark_text">备注：机器人说完欢迎语后，会进入语音交流模式，直到人离开</string>
    <string name="cancel">取消</string>
    <string name="affirm">确认</string>
    <string name="confirm">确定</string>
    <string name="ultrasonic_confirm">确认</string>
    <string name="action_text">去设置</string>
    <string name="welcome_tts">欢迎光临</string>
    <string name="ultrasonic_setting_hint">注:启动前请查看超声波数据是否正常，如不正常，请点击右侧"初始化"按钮</string>
    <string name="ultrasonic_setting">超声波设置</string>

    <string name="ultrasonic_setting_hint_1">1）超声波实际检测数据小于上面设定的数值时就会触发迎宾</string>
    <string name="ultrasonic_setting_hint_2">2）设定数值后才会开启该超声波，不设数值则表示不开启</string>
    <string name="ultrasonic_setting_hint_3">3）建议开启上面5个超声波（左1、左3、中1、右3、右1）</string>

    <!-- ===================== -->
    <string-array name="face_time_bodycommercial">
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>4</item>
        <item>5</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>3</item>
        <item>3</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>6</item>
        <item>2</item>
        <item>4</item>
        <item>3</item>
        <item>6</item>
        <item>4</item>
        <item>4</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <integer-array name="face_time_commercial">
        <item>3</item>
        <item>4</item>
        <item>6</item>
        <item>4</item>
        <item>5</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>3</item>
        <item>3</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>4</item>
        <item>4</item>
        <item>6</item>
        <item>3</item>
        <item>3</item>
        <item>3</item>
        <item>6</item>
        <item>2</item>
        <item>4</item>
        <item>3</item>
        <item>6</item>
        <item>4</item>
        <item>4</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
    </integer-array>
    <string-array name="action_light">
        <item>3</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
    </string-array>

    <string-array name="head_direction">
        <item>无</item>
        <item>左转</item>
        <item>右转</item>
        <item>归位</item>
    </string-array>

    <string-array name="head_angle">
        <item>无</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string-array name="head_time">
        <item>无</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>

    <string-array name="wheel_direction">
        <item>无</item>
        <item>前进</item>
        <item>后退</item>
        <item>左转</item>
        <item>右转</item>
    </string-array>


    <string-array name="wheel_angle">
        <item>无</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>180</item>
    </string-array>

    <string-array name="wheel_speed">
        <item>无</item>
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>

    <string-array name="wheel_time">
        <item>无</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>


    <string-array name="wing_direction">
        <item>无</item>
        <item>左翅膀</item>
        <item>右翅膀</item>
        <item>双翅膀</item>
    </string-array>


    <string-array name="wing_angle">
        <item>无</item>
        <item>40</item>
        <item>60</item>
        <item>90</item>
        <item>100</item>
    </string-array>


    <string-array name="wing_time">
        <item>无</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>

    <string-array name="light">
        <item>无</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>


    <string name="addmedia">1.自定义上传图片后，广告播放时图片文件会替换当前子项目包含的表情包。（建议图片大小为1280*800）。\n图片仅支持：JPG和PNG</string>
    <string name="addmedia2">2.自定义上传视频后，广告播放时视频文件会覆盖迎宾语声音和机器人表情。\n视频仅支持：MP4</string>
    <string name="addmedia3">3.上传视频后，无法上传图片与音频，同样的，上传图片或音频后无法上传视频。\n音频仅支持：MP3和WAV</string>
    <string name="addmedia4">4.上传音频文件后，音频会覆盖迎宾语。</string>

    <string name="init_ultrasonic_hint">超声波标定要保证周围1米没有障碍物</string>
    <string name="error_use__hint">检测到DIY中已使用超声波，如需继续请关闭DIY中的超声波</string>

    <string name="guest_explain_text0">迎宾功能通过机器人正面的6个超声波传感器感应是否有人接近机器人，可以通过勾选启用某一个或者某几个超声波并填写探测距离。当超声波检测到该距离内有人时，则会触发迎宾语。当检测人离开10秒后，则触发结束语，将回到等待状态。
</string>
    <string name="guest_explain_text1">该区域内，可以显示现阶段各个超声波的状态，在正常运行迎宾功能之前，需先检查传感器的状态是否正常，方法：逐个挡住传感器，观察传感器的数值，是否与实际距离一致。如果发现数据不正常，可点击右侧的“校正”按钮，对数据进行校正。校正时，需要保证机器人周围1米内没有障碍物。
“自动校正超声波”：勾选后，每次定时启动，机器人会先自动校正一次超声波数据。
</string>
    <string name="guest_explain_text2">可以勾选使用机器人的一个或者多个超声波来进行检测，并对应填写检测距离。</string>
    <string name="guest_explain_text3">用户可以自行设置欢迎语、表情、动作、灯带、当感应到人接近后，机器人会执行一次，然后进入到“交流状态”。（建议将灯带设置成常亮，方便区分是否进入迎宾状态）</string>
    <string name="guest_explain_text4">用户可以自行设置欢迎语、表情、动作、灯带，当检测到人离开10秒后，机器人会执行一次，然后进入到“等待状态”。</string>

    <string name="faceValue">表情</string>
    <string name="action_value">动作</string>
    <string name="advanced_setting_value">高 级 设 置</string>

    <string name="advanced_setting_time_title">语音交流延迟时间：</string>
    <string name="advanced_setting_time_note">迎宾触发后，机器人执行完迎宾语后进入语音交流状态，设置语音交流延迟时间可提升超声波检测是否有人的准确率。例：设置语音交流延迟时间5秒，5秒内超声波都检测没人，则执行结束语。</string>

    <string name="advanced_setting_correction_title">超声波自动校正</string>
    <string name="advanced_setting_correction_note">超声波自动校正开启后，每次开启迎宾功能时，超声波都会自动标定一次。</string>

    <string name="advanced_setting_guest_title">关闭面罩自动迎宾</string>
    <string name="advanced_setting_guest_note">此功能开启后，只需关闭面罩，机器人就会自动进入迎宾模式。关闭面罩前，请先确认超声波数据是否正常。注：在其他应用场景中，若关闭面罩不需要开启迎宾功能时，请关闭这个功能。</string>

    <string name="advanced_setting_wheel_title">开启双轮运动</string>
    <string name="advanced_setting_wheel_note">请谨慎关闭该功能！！！双轮运动关闭后，在迎宾状态下，机器人将不会再执行行走、转圈等动作，退出迎宾状态，双轮运动自动开启。异常情况退出迎宾状态，请重新进入迎宾app，否则无法恢复双轮状态。，</string>

    <string name="advanced_setting_face_note">开启人脸识别后，机器人识别到人能根据人名来打招呼</string>

    <!-- Face -->
    <string name="start_1">人脸识别</string>
    <string name="add_face">Add face</string>
    <string name="unlock_insert_face">录入/清空人脸</string>
    <string name="insert_face">录入人脸</string>
    <string name="clear_face_db">清除人脸库</string>
    <string name="tipe_add1">点击页面底部按钮 - 添加正脸</string>
    <string name="tips_add3">点击页面底部按钮 - 添加抬头数据</string>
    <string name="tipe_add4">点击页面底部按钮 - 添加低头数据</string>
    <string name="tips_add2">点击页面底部按钮 - 添加侧脸数据</string>
    <string name="insert_now_1">准备添加第一张人脸——正脸(1/4)</string>
    <string name="insert_now_2">准备添加第二张人脸——侧脸(2/4)</string>
    <string name="insert_now_3">准备添加第三张人脸——抬头(3/4)</string>
    <string name="insert_now_4">准备添加第四张人脸——低头(4/4)</string>
    <string name="dalog_notice">提示</string>
    <string name="dialog_msg">已识别您为 %1$s ，是否更新您的人脸库？</string>
    <string name="ignore">忽略</string>
    <string name="update">更新</string>
    <string name="i_not_him">我不是他</string>
    <string name="please_face_to">请正脸面对</string>
    <string name="please_left_20">请侧脸20°</string>
    <string name="please_up_20">请抬头20°</string>
    <string name="please_down_20">请低头20°</string>
    <string name="delete_toast">确认清除所有人脸数据库？</string>
    <string name="_sure">确定</string>
    <string name="_not_sure">取消</string>
    <string name="_sure_out">确定退出</string>
    <string name="_keep_pre">继续完善</string>
    <string name="dialog_msg1">你当前共添加 %1$s 张人脸数据，尚未注册完整，确定退出？</string>
    <string name="dialog_msg2">人脸录入成功，Face ID =  %1$s 请输入昵称 </string>
    <string name="insert_nickname">请输入昵称，不能为空哦</string>
    <string name="_dialog_isnext">当前录入完成，是否录入下一个？</string>
    <string name="_yes">是</string>
    <string name="_no">否</string>


    <string name="count_start_1">人脸库管理</string>
    <string name="count_start_2">人脸识别</string>
    <string name="count_start_3">更多功能</string>
    <string name="count_start_4">测试</string>

    <string name="insert_next">跳过</string>
    <string name="points">关键点</string>
    <string name="photograph_input">人脸录入</string>
    <string name="cant_found_you">看不到人脸啦</string>
    <string name="image_sure_next">当前录入完成，是否进行人脸识别？</string>
    <string name="know_yet">"已经认识你啦，，不用再添加人脸了 id = %1$s"</string>
    <string name="image_indert_msg">请按以下示意依次添加照片</string>
    <string name="start_register">开始注册</string>

    <string name="input_face">录入人脸</string>
    <string name="manage_edit">编辑</string>
    <string name="person_list">人脸列表</string>
    <string name="manage_ending">完成</string>
    <string name="manage_toast_none_select">未选中任何可删除项！</string>
    <string name="manage_sure_delete">确定删除选中的人脸数据？</string>
    <string name="manage_delete">删除</string>
    <string name="manage_selete_all">全选</string>

    <string name="reset">清除数据库</string>
    <string name="reset_db_success">清除数据库成功</string>
</resources>
