<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/main_bg"
    android:paddingBottom="25dp"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="25dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/advanced_setting_bg"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp">

                <TextView
                    android:id="@+id/advanced_setting_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#90FFFFFF"
                    android:textSize="18sp"
                    android:text=""
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/advanced_setting_value"
                    android:textColor="@color/white"
                    android:textSize="38sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/advanced_setting_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/selector_save_button_bg"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:text="保存并退出"
                    android:textColor="@drawable/selector_title_click"
                    android:textSize="@dimen/textsize_22" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/advanced_speech"
                        android:textColor="@color/white"
                        android:textSize="@dimen/advanced_title_text_size"
                        android:textStyle="bold" />

                    <com.zcw.togglebutton.ToggleButton
                        android:id="@+id/advanced_setting_speech_btn"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">



                    <TextView
                        android:id="@+id/advanced_setting_time_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:text="@string/advanced_setting_time_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/advanced_title_text_size"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/advanced_setting_time_et"
                        android:layout_width="@dimen/padding_100"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/padding_40"
                        android:layout_toRightOf="@+id/advanced_setting_time_title_tv"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="5"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textsize_26" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/advanced_setting_time_et"
                        android:text="S"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/advanced_setting_time_note"
                    android:textColor="@color/white"
                    android:lineSpacingExtra="10dp"
                    android:textSize="@dimen/advanced_note_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/advanced_setting_correction_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/advanced_title_text_size"
                        android:textStyle="bold" />

                    <com.zcw.togglebutton.ToggleButton
                        android:id="@+id/advanced_setting_correction_btn"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        >

                    </com.zcw.togglebutton.ToggleButton>

                    <!--<TextView-->
                    <!--android:id="@+id/advanced_setting_correction_btn"-->
                    <!--android:layout_width="@dimen/padding_160"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:background="@drawable/advanced_button_bg"-->
                    <!--android:gravity="center"-->
                    <!--android:padding="@dimen/padding"-->
                    <!--android:text="关闭"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="@dimen/textsize_26" />-->
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/advanced_setting_correction_note"
                    android:textColor="@color/white"
                    android:textSize="@dimen/advanced_note_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/advanced_setting_guest_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/advanced_title_text_size"
                        android:textStyle="bold" />

                    <com.zcw.togglebutton.ToggleButton
                        android:id="@+id/advanced_setting_guest_btn"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                    <!--<TextView-->
                    <!--android:id="@+id/advanced_setting_guest_btn"-->
                    <!--android:layout_width="@dimen/padding_160"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:background="@drawable/advanced_button_bg"-->
                    <!--android:gravity="center"-->
                    <!--android:padding="@dimen/padding"-->
                    <!--android:text="关闭"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="@dimen/textsize_26" />-->
                </RelativeLayout>

                <TextView
                    android:id="@+id/advanced_setting_auto_html_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/advanced_setting_guest_note"
                    android:textColor="@color/white"
                    android:lineSpacingExtra="10dp"
                    android:textSize="@dimen/advanced_note_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical"
                android:visibility="gone"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/advanced_setting_wheel_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/advanced_title_text_size"
                        android:textStyle="bold" />


                    <com.zcw.togglebutton.ToggleButton
                        android:id="@+id/advanced_setting_wheel_btn"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        toggle:tbAsDefaultOn="true"
                        />

                    <!--<TextView-->
                    <!--android:id="@+id/advanced_setting_wheel_btn"-->
                    <!--android:layout_width="@dimen/padding_160"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:background="@drawable/advanced_button_bg"-->
                    <!--android:gravity="center"-->
                    <!--android:padding="@dimen/padding"-->
                    <!--android:text="关闭"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="@dimen/textsize_26" />-->
                </RelativeLayout>

                <TextView
                    android:id="@+id/advanced_setting_wheel_html_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/advanced_setting_wheel_note"
                    android:textColor="@color/white"
                    android:textSize="@dimen/advanced_note_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="80dp"
        />

</RelativeLayout>