<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_manage_face"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical">

    <include layout="@layout/unlock_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="#DDDDDD" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <RelativeLayout
            android:id="@+id/edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="80dp">

            <TextView
                android:id="@+id/title_person"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="13sp"
                android:gravity="center_vertical"
                android:text="人员信息"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_26" />

            <Button
                android:id="@+id/insert_pic_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13sp"
                android:layout_toRightOf="@+id/title_person"
                android:background="@drawable/add_face_bg"
                android:gravity="center_vertical"
                android:onClick="topClick"
                android:padding="10dp"
                android:text="添加新用户"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />


            <Button
                android:id="@+id/edit_person"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:onClick="topClick"
                android:text="@string/manage_edit"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="姓名"
                android:layout_marginLeft="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="照片"
                android:layout_marginLeft="300dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="录入时间"
                android:layout_marginLeft="600dp"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="#DDDDDD"
            android:layout_marginTop="15dp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/face_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@android:color/transparent" />

            <RelativeLayout
                android:id="@+id/edit_parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#DDDDDD" />

                <View
                    android:id="@+id/select_radio"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:background="@mipmap/manage_item_unse"
                    android:onClick="topClick" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="13sp"
                    android:layout_toRightOf="@id/select_radio"
                    android:gravity="center_vertical"
                    android:text="@string/manage_selete_all"
                    android:textColor="#333333"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/delete_face"
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="13dp"
                    android:background="@drawable/video_start_selector"
                    android:gravity="center"
                    android:onClick="topClick"
                    android:text="@string/manage_delete"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
